--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-server.port=8080
+spring.datasource.url=jdbc:postgresql://db:5432/bappoint_dev
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
