--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>31.3.0</version>
+		</dependency>
+
 
 	</dependencies>
 
