feat: config api key for stripe.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
+
+
+stripe.secret.key=${STRIPE_SECRET_KEY}
