--- a/compose.yaml
+++ b/compose.yaml
@@ -60,6 +60,8 @@ services:
       - "5432:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
+    env_file:
+      - .env
 
   server:
     build: .
@@ -67,11 +69,12 @@ services:
       - db
     ports:
       - "8080:8080"
+    env_file:
+          - .env
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/bappoint_dev
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
-
 volumes:
   db-data:
 
